@@ -3,6 +3,13 @@ This file only list changes to game code.  Changes to content can be found here:
 http://onehouronelife.com/updateLog.php
 
 
+Version 304   ???
+
+--No longer playing eating animation when sticking food in clothing container.
+  Fixes #490
+
+
+
 Version 302    2020-January-9
 
 --Fixed editor skipping gaps in numbering in sprite import cache.
